--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ members = ["client_lib"]
 version = "0.1.0"
 
 [workspace.dependencies]
-foo = { package = "borsh", version = "1.1.1",  git = "https://github.com/serprex/borsh-rs.git", branch = "master", features = ["derive"] }
+foo = { package = "borsh", version = "1.1.2", features = ["derive"] }
